# legal-chatbot-langgraph

./: .gitignore  README.md  chat_log.md  docker-compose.yml  langgraph.json  pyproject.toml
old/: graph2.py
src/legal_chatbot_langgraph/: __init__.py  graph.py  graph2.py  graph_builder.py  graph_nodes.py  graph_test.py  init.py  llm_config.py  main.py  main_test.py  models.py  schemas.py  state.py  state_graph.py  tools.py  utils.py
src/legal_chatbot_langgraph/graphs/: main_graph.py  retrieval_graph.py
src/legal_chatbot_langgraph/utils/: nodes.py  tools.py
